--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,11 +4,9 @@
     <head>
         <meta charset="UTF-8" />
         <title icon="fa-solid fa-house">{% block head_title %}Blog{% endblock %}</title>
-        <link
-            rel="stylesheet"
-            href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
-            media="screen"
-        />
+        <link rel="stylesheet"          
+          href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
+          media="screen"/>
         <script src="https://kit.fontawesome.com/d440af0ce0.js" crossorigin="anonymous"></script>
         <!--fontawesome 아이콘 이미지-->
     </head>
@@ -29,11 +27,21 @@
                     <!-- Search widget-->
                     <div class="card my-4">
                         <h5 class="card-header">Search</h5>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <input type="text" class="form-control" 
+                                       placeholder="Search for..." id="search-input">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-secondary" type="button" onclick="searchPost();">Go</button>
+                                </span>
+                            </div>
+                        </div>
                     </div>
+                    
                     <!-- Categories -->
                     <div class="card my-4" id="categories-card">
                         <h5 class="card-header">Categories</h5>
-                        <div calss="card-body">
+                        <div class="card-body">
                             <ul>
                                 {% for category in categories %}
                                 <li>
@@ -53,23 +61,36 @@
                 </div>
             </div>
         </div>
+        
+        <script>
+            function searchPost() {
+                let searchValue = document.getElementById('search-input').value.trim();
+                if(searchValue.length > 1){
+                    location.href = "/blog/search/" + searchValue + "/";
+                }
+                else{
+                    alert("검색어(" + searchValue + ")가 너무 짧습니다.")
+                }
+            };
+            
+            document.getElementById('search-input').addEventListener('keyup', function(event){
+                if(event.key == "Enter"){
+                    searchPost();
+                }
+            });
+            
+        </script>
 
         {% include 'blog/footer.html' %}
 
-        <script
-            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
             integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
             integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-            crossorigin="anonymous"
-        ></script>
+            crossorigin="anonymous"></script>
     </body>
 </html>
