--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,19 +1,64 @@
 <!doctype html>
+{% load static %}
 <html lang='ko'>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet"          
+          href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
+          media="screen"/>
+    <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
+    <script src="https://kit.fontawesome.com/d440af0ce0.js" crossorigin="anonymous"></script>
     <title>성윤의 블로그</title>
 </head>
 <body>
-    <nav>
-        <a href="/blog">Blog</a>
-        <a href="/about_me">About me</a>
-    </nav>
+    {% include 'blog/navbar.html' %}
+    
+    <section>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-6 text-light">
+                    <h1 class="mt-5">성윤의 블로그</h1>
+                    <p>
+                        아직 완성중인 블로그입니다. <br>
+                        앞으로 꾸준히 블로그를 완성시켜나갈 예정입니다. <br>
+                    </p>
+                </div>
+                
+                <div class="col-lg-5 mt-5">
+                    <h2 class="text-ligth">Blog - Recent Posts</h2>
+                    
+                    {% for post in recent_post %}
+                    <div class="card mt-1">
+                        <div class="card-body">
+                            <h6>
+                                <a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">
+                                    {{ post.title }}
+                                </a>
+                            </h6>
+                            <span class="badge badge-pill badge-light float-right">
+                                {{ post.author.username }} &nbsp;&nbsp; {{ post.created_at }}
+                            </span>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+        
+            </div>
+        </div>
+    </section>
+    
+    <div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+    </div>
 
-    <h1>안녕하세요</h1>
-    <h2>대문페이지 작성</h2>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </body>
 </html>
